welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: type mismatch;
 found   : Boolean
 required: Int
        return die1==1}
                   ^